Exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops-namespace
  labels:
    app: devops-exercise
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: devops.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-service
                port:
                  number: 8080
